--- a/capsled.service
+++ b/capsled.service
@@ -3,7 +3,7 @@ Description=Capsled, virtual caps lock led
 
 [Service]
 Type=oneshot
-ExecStart=/bin/capsled
+ExecStart=/bin/capsled -b
 ExecStop=/bin/sh -c "killall capsled"
 RemainAfterExit=yes
 
